[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/UI/UI_Listitem_clickmask.png" type="BitMap" id=1]
[ext_resource path="res://Sprites/UI/UI_Listitem_Selected.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/UI_Listitem_unselected.png" type="Texture" id=3]
[ext_resource path="res://fonts/OpyimusTitle.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/UI/Inventory/ListItemBase.gd" type="Script" id=5]

[node name="ListItem" type="TextureButton"]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 1.46252, 1.46252 )
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )
texture_click_mask = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 10.94
margin_top = 7.52126
margin_right = 182.94
margin_bottom = 44.5213
rect_scale = Vector2( 0.40029, 0.40029 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "ItemName"
[connection signal="focus_entered" from="." to="." method="gain_focus"]
[connection signal="mouse_entered" from="." to="." method="_on_ListItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ListItem_mouse_exited"]
[connection signal="pressed" from="." to="." method="selection_sound"]
